# test2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  agent.md  learn.py  main.py  pyproject.toml
.github/workflows/: ci.yml  code-review.yml
src/cs_bot/: bot.py  policies.py  products.py
src/linux_learn/: game.py
tests/: test_bot.py  test_linux_learn.py  test_policies.py  test_products.py
